--- a/css/styless.css
+++ b/css/styless.css
@@ -68,7 +68,8 @@ body {
     list-style: none;
 }
 .hero-section {
-    background-color: var(--section-background-color); 
+    background-color: var(--section-background-color);
+    padding: 188px 0;
 }
 .hero-header {
     font-size: 56px;
@@ -76,6 +77,9 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
+    max-width: 496px;
+    margin-bottom: 48px;
+    margin: 0 auto;
 }
 .bttn-hero {
     background-color: #4D5AE5;
@@ -86,6 +90,15 @@ body {
     letter-spacing: 0.04em;
     color: #ffffff;
     cursor: pointer;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 0 auto;
+    margin-top: 48px;
+    
 }
 .bttn-hero:hover,
 .bttn-hero:focus {
