--- a/css/styless.css
+++ b/css/styless.css
@@ -78,7 +78,6 @@ body {
     letter-spacing: 0.02em;
     color: #ffffff;
     max-width: 496px;
-    margin-bottom: 48px;
     margin: 0 auto;
 }
 .bttn-hero {
@@ -110,6 +109,7 @@ body {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--logo-second-color);
+    margin-bottom: 8px;
 }
 .features-text {
     font-size: 16px;
@@ -230,4 +230,25 @@ body {
 }
 img {
     display: block;
+}
+.features-section {
+    padding: 120px 0;
+}
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+.features-container {
+    display: flex;
+    gap: 24px;
+}
+.features-item {
+    width: calc((100% - 72px) / 4);
 }
