--- a/css/styless.css
+++ b/css/styless.css
@@ -250,5 +250,6 @@ img {
     gap: 24px;
 }
 .features-item {
-    width: calc((100% - 72px) / 4);
+    flex-basis: calc((100% - 3 * 24px);
 }
+      
