--- a/css/styless.css
+++ b/css/styless.css
@@ -128,6 +128,7 @@ body {
 }
 .team-section {
     background-color: #F4F4FD;
+    padding: 120px 0;
 }
 .team-header {
     font-size: 36px;
@@ -136,9 +137,12 @@ body {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--logo-second-color);
+    margin-bottom: 72px;
 }
 .personal-item {
     background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
 }
 .name-header {
     font-weight: 500;
@@ -146,15 +150,23 @@ body {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--logo-second-color);
+    text-align: center;
+    margin-bottom: 8px;
+
+
 }
 .work-position {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--primary-color);
+    text-align: center;
+
 }
 .footer-options {
-    background-color: var(--section-background-color)
+    background-color: var(--section-background-color);
+    padding: 100px 0;
+
 }
 .footer-logo {
     font-family: "Raleway", sans-serif;
@@ -164,6 +176,8 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--logo-first-color);
+    display: inline-block;
+    margin-bottom: 16px;
 }
 .logo-item {
     color: #f4f4fd 
@@ -172,6 +186,7 @@ body {
     line-height: 1.5;
     color: var(--footer-color);
     letter-spacing: 0.02em;
+    max-width: 264px;
 }
 .footer-item {
     background-color: var(--second-logo-color);
@@ -262,4 +277,13 @@ img {
 }
 .doing-item {
     width: calc((100% - 48px) / 3);
+}
+.team-container {
+    display: flex;
+    gap: 24px;
+
+}
+.personal-container {
+    padding: 32px 16px;
+
 }
