--- a/css/styless.css
+++ b/css/styless.css
@@ -271,7 +271,7 @@ img {
     gap: 24px;
 }
 .features-item {
-    flex-basis: calc((100% - 3 * 24px));
+    width: calc((100% - 72px) / 4);
 }
 .doing-section {
     padding-bottom: 120px;
@@ -281,7 +281,7 @@ img {
     gap: 24px;
 }
 .doing-item {
-    width: calc((100% - 48px) / 3);
+    flex-basis: calc((100% - 2 * 24px) / 3);
 }
 .team-container {
     display: flex;
