--- a/css/styless.css
+++ b/css/styless.css
@@ -14,6 +14,7 @@
         --address-color: #434455;
         --button-collor: #4d5ae5;
         --button-background-color: #F4F4FD;
+        --button-exlusive-color: #e7e9fc;
 }
 body {
     font-family: "Roboto", sans-serif;
@@ -141,8 +142,12 @@ body {
 }
 .personal-item {
     background-color: #FFFFFF;
-    width: calc((100% - 72px) / 4);
+    flex-basis: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+}
+.position-item {
+    padding: 32px 16px;
+
 }
 .name-header {
     font-weight: 500;
@@ -196,8 +201,8 @@ body {
     color: #FFFFFF;
     background-color: #404BBF;
     cursor: pointer;
-    padding: 12px 24px;
-    border: 1px solid #e7e9fc;
+    padding: 12px 24px 12px;
+    border: 1px solid var(--button-exlusive-color);
     border: 1px solid transparent;
     border-radius: 4px;
 }
@@ -271,7 +276,7 @@ img {
     gap: 24px;
 }
 .features-item {
-    width: calc((100% - 72px) / 4);
+    flex-basis: calc((100% - 72px) / 4);
 }
 .doing-section {
     padding-bottom: 120px;
@@ -306,10 +311,12 @@ img {
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-    width: calc((100% - 48px) / 3);
 }
 .portfolio-item {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
+}
+.portfolio-list {
+    width: calc((100% - 48px) / 3);
 }
