--- a/css/styless.css
+++ b/css/styless.css
@@ -276,7 +276,7 @@ img {
     gap: 24px;
 }
 .features-item {
-    flex-basis: calc((100% - 72px) / 4);
+    flex-basis: calc((100% - 3 * 24px) / 4);
 }
 .doing-section {
     padding-bottom: 120px;
