--- a/css/styless.css
+++ b/css/styless.css
@@ -36,6 +36,19 @@ body {
     text-decoration: none;
 
 }
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 .header-second-logo {
     color: var(--logo-second-color);
 }
@@ -201,10 +214,7 @@ body {
     color: #FFFFFF;
     background-color: #404BBF;
     cursor: pointer;
-    padding: 12px 24px 12px;
-    border: 1px solid var(--button-exlusive-color);
     border: 1px solid transparent;
-    border-radius: 4px;
 }
 .image-header {
     font-weight: 500;
@@ -228,6 +238,9 @@ body {
     letter-spacing: 0.04em;
     color: var(--button-collor);
     background-color: var(--button-background-color);
+    padding: 12px 24px;
+    border: 1px solid var(--button-exlusive-color);
+    border-radius: 4px;
 }
 .header-section {
     border-bottom: 1px solid #e7e9fc;
@@ -259,17 +272,6 @@ img {
 }
 .features-section {
     padding: 120px 0;
-}
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
 }
 .features-container {
     display: flex;
@@ -317,6 +319,6 @@ img {
     border: 1px solid #e7e9fc;
     border-top: none;
 }
-.portfolio-list {
+.portfolio-style {
     width: calc((100% - 48px) / 3);
 }
