--- a/css/styless.css
+++ b/css/styless.css
@@ -22,6 +22,9 @@ body {
     color: #434455;
     color: var(--body-color);
     }
+        ul {
+            padding: 0;
+        }
 .header-logo {
     font-family: "Raleway", sans-serif;
     font-weight: 800; 
@@ -208,6 +211,7 @@ body {
 }
 .footer-item {
     background-color: var(--second-logo-color);
+        padding: 100px 0;
 }
 .bttn-all:hover,
 .bttn-all:focus {
