--- a/css/styless.css
+++ b/css/styless.css
@@ -21,10 +21,10 @@ body {
     background-color: #FFFFFF;
     color: #434455;
     color: var(--body-color);
-    }
-        ul {
-            padding: 0;
-        }
+}
+ul {
+    padding: 0;
+}
 .header-logo {
     font-family: "Raleway", sans-serif;
     font-weight: 800; 
@@ -62,6 +62,7 @@ body {
     letter-spacing: 0.02em;
     color: var(--logo-second-color);
     padding: 24px 0;
+    display: block;
 }
 .link:hover,
 .link:focus {
@@ -69,12 +70,16 @@ body {
 }
 .header-address {
     font-style: normal;
+    margin-left: auto;
 }
 .header-address-list {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--address-color);
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: block;
 
 }
 .header-span-logo {
@@ -83,6 +88,8 @@ body {
 }
 .list {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 .hero-section {
     background-color: var(--section-background-color);
@@ -263,7 +270,7 @@ body {
     align-items: center;
 }
 .menu-container {
-    margin-right: 76px;
+    
     gap: 40px;
     display: flex;
 }
@@ -325,4 +332,10 @@ img {
 }
 .portfolio-style {
     width: calc((100% - 48px) / 3);
+}
+h1,h2,h3,h4,h5,h6 {
+    margin: 0;
+}
+p {
+    margin: 0;
 }
